# ComfyUI-Image-Saver

./: CHANGELOG.md  CLAUDE.md  README.md  __init__.py  civitai_nodes.py  example-workflow.json  nodes.py  nodes_literals.py  nodes_loaders.py  nodes_selectors.py  prompt_metadata_extractor.py  pyproject.toml  utils.py  utils_civitai.py
.github/workflows/: publish.yml  saver-tests.yml
js/: read_exif_workflow.js
js/lib/: exif-reader.js
saver/: pytest.ini  saver.py  test_saver.py
