[project]
name = "comfyui-image-saver"
description = "Save images with generation metadata compatible with Civitai. Works with png, jpeg and webp. Stores LoRAs, models and embeddings hashes for resource recognition."
version = "1.2.1"
license = "LICENSE"
dependencies = ["piexif"]

[project.urls]
Repository = "https://github.com/alexopus/ComfyUI-Image-Saver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alexopus"
DisplayName = "ComfyUI Image Saver"
Icon = ""
